cmake_minimum_required(VERSION 3.0.0)
project(thread VERSION 0.1.0)

include(CTest)
enable_testing()


# ! æµ ãƒ¤ç¬…ç€›ï¸¿ç¯„éå‘­î†å¯®æ› æ•¤é‘·î†ç¶‰ç»”ï¿½ cppreference.com


# # c++ ç’‡î…¡â–ˆé—è§„â‚¬ï¿?
# add_subdirectory(Language)

# # c++ éå‘­ç“¨ç» ï¼„æ‚Š
add_subdirectory(Memory)

# # c++ éå†ªç´ªç»‹å¬ªç°±
# add_subdirectory(Metaprogramming)

# # c++ é–«æ°±æ•¤å®¸ãƒ¥å¿æ´ï¿½
add_subdirectory(General)

# # c++ ç€›æ¥ƒîƒæ¶“æ’ç°±
# add_subdirectory(String)

# # c++ ç€¹ç‘°æ«’æ´ï¿?
# add_subdirectory(Containers)

# # c++ æ©î…å”¬é£ã„¥ç°±
# add_subdirectory(Iterators)

# # c++ IOæ´ï¿½
# add_subdirectory(IO)

# # c++ å§ï½…å¯ç›ã„¨æªå¯®å¿“ç°?
# add_subdirectory(Regex)

# c++11 éªè·ºå½‚ç¼‚æ «â–¼
add_subdirectory(Concurrency)



set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
